// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentSubscription container UI state iterations premium credit renders when there is active premium credit 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "Premium Credit",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium Credit"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      Teacher Premium Credit
                      <Tooltip
                        tooltipText="You have a Premium Credit subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        Teacher Premium Credit
                        <Tooltip
                          tooltipText="You have a Premium Credit subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="emilia+3@quill.org"
                  title="Purchaser"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Purchaser
                    </span>
                    <span>
                      emilia+3@quill.org
                    </span>
                  </div>
                </_default>
                <_default
                  content="Off"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      Off
                    </span>
                  </div>
                </_default>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              No Payment Method on File
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Quill Basic - Free
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Quill Basic - Free
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Once your current Teacher Premium Credit subscription expires, you will be downgraded to Quill Basic.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations premium credit renders when there is expired premium credit 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "Premium Credit",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2022-01-1",
      "expired": true,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium Credit"
  userIsContact={false}
>
  <span />
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations teacher free renders when there is an active free teacher premium subscription 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "College Board Educator Lifetime Premium",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      Teacher Premium
                      <Tooltip
                        tooltipText="You have a College Board Educator Lifetime Premium subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        Teacher Premium
                        <Tooltip
                          tooltipText="You have a College Board Educator Lifetime Premium subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="emilia+3@quill.org"
                  title="Purchaser"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Purchaser
                    </span>
                    <span>
                      emilia+3@quill.org
                    </span>
                  </div>
                </_default>
                <_default
                  content="Off"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      Off
                    </span>
                  </div>
                </_default>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              No Payment Method on File
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Quill Basic - Free
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Quill Basic - Free
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Once your current Teacher Premium subscription expires, you will be downgraded to Quill Basic.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations teacher free renders when there is an expired free teacher premium subscription 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "College Board Educator Lifetime Premium",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2022-01-1",
      "expired": true,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium"
  userIsContact={false}
>
  <span />
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations teacher paid renders when there is an active non-recurring teacher premium subscription 1`] = `
<CurrentSubscription
  authorityLevel="purchaser"
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "Teacher Paid",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": "Credit Card",
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      Teacher Premium
                      <Tooltip
                        tooltipText="You have a Teacher Paid subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        Teacher Premium
                        <Tooltip
                          tooltipText="You have a Teacher Paid subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="emilia+3@quill.org"
                  title="Purchaser"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Purchaser
                    </span>
                    <span>
                      emilia+3@quill.org
                    </span>
                  </div>
                </_default>
                <_default
                  content="Off"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      Off
                    </span>
                  </div>
                </_default>
                <button
                  className="q-button bg-orange text-white focus-on-light"
                  onClick={[Function]}
                  type="button"
                >
                  Turn On Automatic Renewal
                </button>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              Credit Card ending in undefined
              <button
                className="interactive-wrapper focus-on-light"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#027360",
                    "cursor": "pointer",
                    "fontSize": "14px",
                    "paddingLeft": "10px",
                  }
                }
                type="button"
              >
                Edit Credit Card
              </button>
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Quill Basic - Free
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Quill Basic - Free
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Once your current Teacher Premium subscription expires, you will be downgraded to Quill Basic. To prevent your subscription from expiring, turn on automatic renewal.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations teacher paid renders when there is an active recurring teacher premium subscription 1`] = `
<CurrentSubscription
  authorityLevel="purchaser"
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "Teacher Paid",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": "Credit Card",
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": true,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      Teacher Premium
                      <Tooltip
                        tooltipText="You have a Teacher Paid subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        Teacher Premium
                        <Tooltip
                          tooltipText="You have a Teacher Paid subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="emilia+3@quill.org"
                  title="Purchaser"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Purchaser
                    </span>
                    <span>
                      emilia+3@quill.org
                    </span>
                  </div>
                </_default>
                <_default
                  content="On"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      On
                    </span>
                  </div>
                </_default>
                <button
                  className="q-button bg-orange text-white focus-on-light"
                  onClick={[Function]}
                  type="button"
                >
                  Turn Off Automatic Renewal
                </button>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              Credit Card ending in undefined
              <button
                className="interactive-wrapper focus-on-light"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#027360",
                    "cursor": "pointer",
                    "fontSize": "14px",
                    "paddingLeft": "10px",
                  }
                }
                type="button"
              >
                Edit Credit Card
              </button>
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Teacher Premium
                         - $
                        80
                         Annual Subscription
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Teacher Premium
                           - $
                          80
                           Annual Subscription
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 2nd, 2070"
                  title="Begins On"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Begins On
                    </span>
                    <span>
                      January 2nd, 2070
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Your Teacher Premium subscription will be renewed on January 2nd, 2070 and your card ending in undefined will be charged $80.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations teacher paid renders when there is an expired teacher premium subscription 1`] = `
<CurrentSubscription
  authorityLevel="purchaser"
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "Teacher Paid",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2022-01-1",
      "expired": true,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": "Credit Card",
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium"
  userIsContact={false}
>
  <span />
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations trial renders when there is an active trial 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "Teacher Trial",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium Trial"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      Teacher Premium Trial
                      <Tooltip
                        tooltipText="You have a Teacher Trial subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        Teacher Premium Trial
                        <Tooltip
                          tooltipText="You have a Teacher Trial subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="emilia+3@quill.org"
                  title="Purchaser"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Purchaser
                    </span>
                    <span>
                      emilia+3@quill.org
                    </span>
                  </div>
                </_default>
                <_default
                  content="Off"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      Off
                    </span>
                  </div>
                </_default>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              No Payment Method on File
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Quill Basic - Free
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Quill Basic - Free
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Once your current Teacher Premium Trial subscription expires, you will be downgraded to Quill Basic.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;

exports[`CurrentSubscription container UI state iterations trial renders when there is an expired trial 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "Teacher Trial",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2022-01-1",
      "expired": true,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="Teacher Premium Trial"
  userIsContact={false}
>
  <span />
</CurrentSubscription>
`;

exports[`CurrentSubscription container should render when the subscription is expired 1`] = `
<CurrentSubscription
  subscriptionStatus={
    Object {
      "account_type": "Teacher Paid",
      "created_at": "2022-02-15T16:43:30.344Z",
      "de_activated_date": null,
      "expiration": "2022-02-15",
      "expired": true,
      "id": 5,
      "mail_to": null,
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": null,
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-15",
      "subscription_type_id": null,
      "updated_at": "2022-02-15T16:43:30.344Z",
    }
  }
>
  <span />
</CurrentSubscription>
`;

exports[`CurrentSubscription container should render when there is no subscription 1`] = `
<CurrentSubscription
  subscriptionStatus={null}
>
  <span />
</CurrentSubscription>
`;

exports[`CurrentSubscription container when there is a current subscription should render when the purchaserNameOrEmail is an empty string 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail=""
  subscriptionStatus={
    Object {
      "account_type": "School Paid",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="School Premium"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      School Premium
                      <Tooltip
                        tooltipText="You have a School Paid subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        School Premium
                        <Tooltip
                          tooltipText="You have a School Paid subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="Off"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      Off
                    </span>
                  </div>
                </_default>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              No Payment Method on File
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Quill Basic - Free
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Quill Basic - Free
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Once your current School Premium subscription expires, you will be downgraded to Quill Basic.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;

exports[`CurrentSubscription container when there is a current subscription should render when there is a purchaserNameOrEmail 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail="emilia+3@quill.org"
  subscriptionStatus={
    Object {
      "account_type": "School Paid",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="School Premium"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      School Premium
                      <Tooltip
                        tooltipText="You have a School Paid subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        School Premium
                        <Tooltip
                          tooltipText="You have a School Paid subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="emilia+3@quill.org"
                  title="Purchaser"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Purchaser
                    </span>
                    <span>
                      emilia+3@quill.org
                    </span>
                  </div>
                </_default>
                <_default
                  content="Off"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      Off
                    </span>
                  </div>
                </_default>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              No Payment Method on File
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Quill Basic - Free
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Quill Basic - Free
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Once your current School Premium subscription expires, you will be downgraded to Quill Basic.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;

exports[`CurrentSubscription container when there is a current subscription should render when there is no purchaserNameOrEmail 1`] = `
<CurrentSubscription
  authorityLevel={null}
  purchaserNameOrEmail={null}
  subscriptionStatus={
    Object {
      "account_type": "School Paid",
      "created_at": "2022-02-16T14: 07: 25.976Z",
      "de_activated_date": null,
      "expiration": "2070-01-01",
      "expired": false,
      "id": 7,
      "lastFour": null,
      "mail_to": "emilia+3@quill.org",
      "payment_amount": null,
      "payment_method": null,
      "purchaser_email": "emilia+3@quill.org",
      "purchaser_id": null,
      "purchaser_name": null,
      "recurring": false,
      "start_date": "2022-02-16",
      "subscription_type_id": null,
      "updated_at": "2022-02-16T14: 07: 25.976Z",
    }
  }
  subscriptionType="School Premium"
  userIsContact={false}
>
  <section>
    <span />
    <h2>
      Subscription Information
    </h2>
    <div
      className="current-subscription-information-and-cta"
    >
      <div
        className="current-subscription-information"
      >
        <div
          className="sub-meta-info"
        >
          <div
            className="meta-section"
          >
            <h3>
              CURRENT SUBSCRIPTION
            </h3>
            <div
              className="flex-row space-between"
            >
              <div>
                <_default
                  content={
                    <span
                      className="content-wrapper"
                    >
                      School Premium
                      <Tooltip
                        tooltipText="You have a School Paid subscription"
                        tooltipTriggerText={
                          <span>
                            <img
                              alt="Question mark icon"
                              className="subscription-tooltip"
                              src="undefined/images/icons/icons-help.svg"
                            />
                          </span>
                        }
                      />
                    </span>
                  }
                  title="Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Plan
                    </span>
                    <span>
                      <span
                        className="content-wrapper"
                      >
                        School Premium
                        <Tooltip
                          tooltipText="You have a School Paid subscription"
                          tooltipTriggerText={
                            <span>
                              <img
                                alt="Question mark icon"
                                className="subscription-tooltip"
                                src="undefined/images/icons/icons-help.svg"
                              />
                            </span>
                          }
                        >
                          <span
                            className="quill-tooltip-trigger"
                          >
                            <span
                              className="undefined"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              tabIndex={null}
                            >
                              <span>
                                <img
                                  alt="Question mark icon"
                                  className="subscription-tooltip"
                                  src="undefined/images/icons/icons-help.svg"
                                />
                              </span>
                            </span>
                            <span
                              className="quill-tooltip-wrapper"
                            >
                              <span
                                className="quill-tooltip"
                              />
                            </span>
                          </span>
                        </Tooltip>
                      </span>
                    </span>
                  </div>
                </_default>
                <_default
                  content="Off"
                  title="Automatic Renewal"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Automatic Renewal
                    </span>
                    <span>
                      Off
                    </span>
                  </div>
                </_default>
              </div>
              <div>
                <_default
                  content="February 16th, 2022"
                  title="Start Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Start Date
                    </span>
                    <span>
                      February 16th, 2022
                    </span>
                  </div>
                </_default>
                <_default
                  content="January 1st, 2070"
                  title="End Date"
                >
                  <div>
                    <span
                      className="title"
                    >
                      End Date
                    </span>
                    <span>
                      January 1st, 2070
                    </span>
                  </div>
                </_default>
              </div>
            </div>
          </div>
          <div
            className="meta-section payment"
          >
            <h3>
              PAYMENT METHOD ON FILE
            </h3>
            <span>
              No Payment Method on File
            </span>
          </div>
          <div
            className="meta-section"
          >
            <h3>
              NEXT SUBSCRIPTION
            </h3>
            <div>
              <div
                className="flex-row space-between"
              >
                <_default
                  content={
                    <span>
                      <span>
                        Quill Basic - Free
                      </span>
                    </span>
                  }
                  title="Next Plan"
                >
                  <div>
                    <span
                      className="title"
                    >
                      Next Plan
                    </span>
                    <span>
                      <span>
                        <span>
                          Quill Basic - Free
                        </span>
                      </span>
                    </span>
                  </div>
                </_default>
              </div>
              <div
                className="next-plan-alert flex-row vertically-centered"
              >
                <i
                  className="fas fa-icon fa-lightbulb-o"
                />
                Once your current School Premium subscription expires, you will be downgraded to Quill Basic.
              </div>
            </div>
          </div>
        </div>
      </div>
      <span />
    </div>
    <Snackbar>
      <div
        className="quill-snackbar "
      />
    </Snackbar>
  </section>
</CurrentSubscription>
`;
